--- a/app/views/bulletins/_form.html.erb
+++ b/app/views/bulletins/_form.html.erb
@@ -9,6 +9,7 @@
 			Correo a todos los usuarios
 		</div>
 		<div class="panel-body">
+			<p class="note">*Todos los campos obligatorios</p>
 			<div class="field">
 				<%= f.text_field :title,:class=>'form-control',:placeholder=>'Título' ,:required=>true %>
 			</div>
