--- a/app/views/interest_links/_form.html.erb
+++ b/app/views/interest_links/_form.html.erb
@@ -1,27 +1,28 @@
 <%orden ||= "Crear"%>
 <%= form_for(@interest_link) do |f| %>
-  <% if @interest_link.errors.any? %>
-      <% @interest_link.errors.full_messages.each do |message| %>
-        <%flash[:alert] = message %>
-      <% end %>
-  <% end %>
+	<% if @interest_link.errors.any? %>
+		<% @interest_link.errors.full_messages.each do |message| %>
+			<%flash[:alert] = message %>
+		<% end %>
+	<% end %>
 
-<div class="panel panel-default panelRease" >
-  <div class="panel-heading">
-    Datos del Link de Interés
-  </div>
-  <div class="panel-body">
-    <div class="field">
-      <%= f.text_field :name, :class => 'form-control', :placeholder => 'Nombre',:required=>true %>
-    </div>
-    <div class="field">
-      <%= f.text_field :url,  :class => 'form-control', :placeholder => 'Página web. Ejemplo: http://www.ejemplo.com',:required=>true %>
-    </div>
-    <div class="field">
-      <%= f.text_area :description,  :class => 'form-control', :placeholder => 'Breve descripción',:required=>true %>
-    </div>
-  </div>  
-</div>
-  <%= f.submit orden, :class=>"btn btn-lg btnCRUD" %>
-  <%= link_to 'Volver', interest_links_path, :class =>"btn btn-lg btnCRUD" %>
+	<div class="panel panel-default panelRease" >
+		<div class="panel-heading">
+			Datos del Link de Interés
+		</div>
+		<div class="panel-body">
+			<p class="note">*Todos los campos obligatorios</p>
+			<div class="field">
+				<%= f.text_field :name, :class => 'form-control', :placeholder => 'Nombre',:required=>true %>
+			</div>
+			<div class="field">
+				<%= f.text_field :url,  :class => 'form-control', :placeholder => 'Página web. Ejemplo: http://www.ejemplo.com',:required=>true %>
+			</div>
+			<div class="field">
+				<%= f.text_area :description,  :class => 'form-control', :placeholder => 'Breve descripción',:required=>true %>
+			</div>
+		</div>  
+	</div>
+	<%= f.submit orden, :class=>"btn btn-lg btnCRUD" %>
+	<%= link_to 'Volver', interest_links_path, :class =>"btn btn-lg btnCRUD" %>
 <% end %>
