--- a/app/views/minutes/_form.html.erb
+++ b/app/views/minutes/_form.html.erb
@@ -11,6 +11,7 @@
 		Datos del Acta
 	</div>
 	<div class="panel-body">
+		<p class="note">*Todos los campos obligatorios</p>
 		<div class="field">
 			<%= f.text_field :name, :class => 'form-control', :placeholder => 'Título de la reunión',:required=>true %>
 		</div>
