--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -11,6 +11,7 @@
 		Datos de la institución
 	</div>
 	<div class="panel-body">
+		<p class="note">*Todos los campos obligatorios</p>
 		<div class="field">
 			<%= f.text_field :name, :class => 'form-control', :placeholder => 'Nombre',:required=>true %>
 		</div>
