formularios listos, diseño inicio arreglado

--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -29,7 +29,7 @@
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
-					<%= link_to 'Estatutos <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatutos_path %>
+					<%= link_to 'Estatuto <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatutos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
@@ -51,7 +51,7 @@
 				<%else%>
 
 				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
-					<%= link_to 'Estatutos <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatutos_path %>
+					<%= link_to 'Estatuto <i class="glyphicon glyphicon-book"></i>'.html_safe, presentation_estatutos_path %>
 				</li>
 
 				<li role="presentation" class="<%= 'active' if current_page?(requests_path) %>">
