--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -1,4 +1,39 @@
 <h1>Bienvenido al sitio de la Red Nacional de Aprendizaje Servicio:</h1>
+<%if user_signed_in?%>
+	<div class="panel panel-default panel-half">
+		<div class="panel-heading">
+			Últimos usuarios registrados
+		</div>
+		<div class="panel-body">
+			<%if @users.present?%>
+				<p><% @users.each  do |user|%>
+					<%if user.photo.present?%>
+						<%=link_to image_tag(user.photo.url(:mini),:class=>'RoundPicture'),user%>
+					<%end%>
+				<%end%></p>
+			<%else%>
+				<%if User.last.photo.present?%>
+					<%=link_to image_tag(User.last.photo.url(:mini),:class=>'RoundPicture'),User.last%>
+				<%else%>
+					<p>Las últimas semanas no se han registrado usuarios</p>
+				<%end%>
+			<%end%>
+		</div>
+	</div>
+	
+	<div class="panel panel-default panel-half">
+		<div class="panel-heading">
+			Última acta de REASE
+		</div>
+		<div class="panel-body">
+			<%if @minute.present?%>
+				<p><%=l @minute.date%>: <%= @minute.name%> - <%=	link_to "Ver", @minute.archive.url %> </p>
+			<%else%>
+				<p>No hay actas disponibles</p>
+			<%end%>			
+		</div>
+	</div>
+<%end%>
 <% @sections.each do |seccion| %>
 	<% div_id = seccion.id -%>
 	<div  class="panel panel-default panelClick">
