--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -166,7 +166,12 @@ p
 	padding: 0;
 	margin: 0;
 }
-
+.omniauthLogo
+{
+	max-height: 30px;
+	max-width: 30px;
+	display: inline-block;
+}
 /*colores para barras y paneles*/
 .panelRease .panel-heading, #pies, #panelInstitution .panel-heading, .panel-half .panel-heading
 {
