--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,21 +1,25 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Nuevo usuario", new_registration_path(resource_name),:id=>"styleSession" %>
+	<%= link_to "Nuevo usuario", new_registration_path(resource_name),:id=>"styleSession" %>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "¿Olvidó su contraseña?", new_password_path(resource_name),:id=>"styleSession" %>
+	<%= link_to "¿Olvidó su contraseña?", new_password_path(resource_name),:id=>"styleSession" %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "¿No ha recibido las instrucciones de confirmación?", new_confirmation_path(resource_name),:id=>"styleSession"%>
+	<%= link_to "¿No ha recibido las instrucciones de confirmación?", new_confirmation_path(resource_name),:id=>"styleSession"%>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name),:id=>"styleSession" %>
+	<%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name),:id=>"styleSession" %>
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider),:id=>"styleSession" %>
-  <% end -%>
+	<%- resource_class.omniauth_providers.each do |provider| %>
+		<%if provider.to_s.titleize == "Facebook"  %>
+			<%= link_to image_tag("facebook.png", :class =>"omniauthLogo"), omniauth_authorize_path(resource_name, provider),:id=>"styleSession" %>
+		<%else%>
+			<%= link_to "Conectarse con #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider),:id=>"styleSession" %>
+		<%end%>
+	<% end -%>
 <% end -%>
