--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -8,15 +8,62 @@
 	</div>
 	<% end %>
 	<div class="panel panel-default panelRease" >
+			<div class="panel-heading">Consentimiento para ser evaluado</div>
+			<div class="panel-body">
+				<div>
+					<p>Antes de registrarse es necesario que sepa los términos y condiciones que existen para pertenecer y mantenerse dentro de ésta red.
+					<a id ="linkEstatuto" data-toggle="modal" data-target = "#encuentro" >
+					>> Leer estatuto</a></p> 
+					<div class="modal fade" id="encuentro" tabindex="-1" role="dialog" aria-labelledby="mymodallabel" aria-hidden="true">
+						<div class="modal-dialog modal-lg modal-estatuto">
+							<div class="modal-content">
+								<div class="modalbody">
+									<button type="button" class="close btnClose" data-dismiss="modal" aria-hidden = "true">
+									&times;
+									</button>
+									<%= render "partials/estatutos" %>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<p>Nuestro enfoque es el servicio, por lo que es necesario mantener un estándar dentro de la Red para que sus participantes cumplan con el objetivo. </p>
+					<p>Es por esto que se le pide a cada nuevo miembro de la red, dé su concentimiento para que pueda ser evaluado en las actividades que realice a nombre de REASE. </p>
+					<p>Además, así como se le evalúa a usted, usted deberá evaluar a otros miembros.
+					De no aprobar éste requisito, usted no podrá registarse en la Red.</p>
+					<p class="note">*Todos los campos son obligatorios.</p>
+				</div>
+			</div>
+	</div>
+	<div class="panel panel-default panelRease" >
     	<div class="panel-heading">Registrarse con redes sociales</div>
     	<div class="panel-body">
 			<div class="field">
 				<p class="note">Confirma tu cuenta en tu correo electrónico.</p>
 				<%= f.text_field :email, :autofocus => true, :value => '', class: 'form-control', placeholder: 'Correo electrónico' %>				
 			</div>
-			<div class="field">
-				<%= f.text_field :nickname, :autofocus => true, :value => '', class: 'form-control', placeholder: 'Apodo o nickname' %>
+			<p class="note">*La contraseña será utilizada para poder editar tu perfil a futuro</p>
+			<div class="field"> <!--aun no sé como agregar el valor de minimo al placeholder-->
+				<% if @validatable %> 
+					<% minimo = @minimum_password_length %> 
+				<% end %>
+				<%= f.password_field :password, :placeholder => "Crear contraseña (6 caracteres como mínimo)", :class => 'form-control', autocomplete: "off" %>
 			</div>
+			<div class="field">
+				<%= f.password_field :password_confirmation, :placeholder => "Confirme su contraseña",:class => 'form-control', autocomplete: "off" %>
+			</div>
+
+			<div class="field">
+				<br>
+				<%= f.text_field :nickname, :autofocus => true, class: 'form-control', placeholder: 'Apodo o nickname' %>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Identificación dentro de la red
+		</div>
+		<div class="panel-body">
 			<div class="field">
 				<p><%= f.label :category, "Rol de usuario" %>
 				<button type="button" class="btn btn-default btnWhite" id:"btnTipoUsuario"  data-trigger="focus" data-container="body" data-toggle="btnRolUsuario"> ? </button></p>
