--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -140,7 +140,11 @@ p
 	font-weight: bold;
 	text-decoration: none;
 }
-
+.experiencia
+{
+	padding-left: 30px;
+	padding-bottom: 20px;
+}
 .inicioSesion
 {
 	padding-bottom: 20px;
