--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Experiencias</h1>
+
+<%= link_to 'Crear experiencia', new_experience_path, :class => "btn btn-lg " %>
+
 <div class="buscador">
 	<%= form_tag(experiences_searchExperience_path, :method => "post",:class=>"form-inline") do %>
 	<div class="input-group">
@@ -10,9 +13,42 @@
 	<%end%>
 </div>
 <ul class="nav nav-tabs tabRease nav-justified">
-<li id="exp1" onclick="exp1()"><a>Solicitudes de Servicio</a></li>
-<li id="exp2" onclick="exp2()"><a>Ofertas de Servicio</a></li>
+<li id="exp3" onclick="exp3()"><a>Experiencias</a></li>
+<li id="exp1" onclick="exp1()"><a>Solicitudes realizadas</a></li>
+<li id="exp2" onclick="exp2()"><a>Ofertas realizadas</a></li>
 </ul>
+
+<div id="FExperiences">
+	<%if @experiences.present?%>
+		<% @experiences.order('created_at DESC').each do |experience| %>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Folio N° <%= experience.folio %>
+				</div>
+				<div class="panel-body">
+					<h2>Descripción:</h2>
+					<p><%=experience.description%></p>
+					<%= link_to "Ver experiencia", experience%>
+					<%if experience.request_id.present?%>
+						- <%= link_to "Ver solicitud asociada", experience.request%>
+					<%else%>
+						- <%= link_to "Ver oferta asociada", experience.offering%>
+					<%end%>
+				</div>
+			</div>
+		<%end%>
+	<%else%>
+			<div class="panel panel-default panelRease">
+				<div class="panel-heading">
+					Experiencias
+				</div>
+				<div class="panel-body">
+					<p>No hay experiencias disponibles</p>
+				</div>
+			</div>
+	<%end%>      
+</div>
+
 <div id="FRequest">
 	<%if @requests.present?%>
 		<% @requests.order('created_at DESC').each do |request| %>
@@ -30,10 +66,10 @@
 	<%else%>
 			<div class="panel panel-default panelRease">
 				<div class="panel-heading">
-					Experiencias de solicitudes de servicio
+					Solicitudes de servicio realizadas
 				</div>
 				<div class="panel-body">
-					<p>No hay experiencias disponibles</p>
+					<p>No hay zolicitudes de servicio realizadas disponibles</p>
 				</div>
 			</div>
 	<%end%>      
@@ -55,29 +91,42 @@
 	<%else%>
 			<div class="panel panel-default panelRease">
 				<div class="panel-heading">
-					Experiencias de ofertas de servicio
+					Ofertas de servicio realizadas
 				</div>
 				<div class="panel-body">
-					<p>No hay experiencias disponibles</p>
+					<p>No hay Ofertas de servicio realizadas disponibles</p>
 				</div>
 			</div>
 	<%end%>
 </div>
 
 <script type="text/javascript">
-	document.getElementById('FRequest').style.display='block';	
-	document.getElementById("exp1").className = "active";	
+	document.getElementById('FExperiences').style.display='block';	
+	document.getElementById('FRequest').style.display='none';	
+	document.getElementById("exp3").className = "active";	
 	document.getElementById('FOfferings').style.display='none';
 	function exp1(){
+		document.getElementById('FExperiences').style.display='none';
 		document.getElementById('FRequest').style.display='block';
 		document.getElementById('FOfferings').style.display='none';
 		document.getElementById("exp1").className = "active";
 		document.getElementById("exp2").className = "";
+		document.getElementById("exp3").className = "";
 	}
 	function exp2(){
+		document.getElementById('FExperiences').style.display='none';
 		document.getElementById('FRequest').style.display='none';
 		document.getElementById('FOfferings').style.display='block';
 		document.getElementById("exp1").className = "";
 		document.getElementById("exp2").className = "active";
+		document.getElementById("exp3").className = "";
+	}
+	function exp3(){
+		document.getElementById('FExperiences').style.display='block';
+		document.getElementById('FRequest').style.display='none';
+		document.getElementById('FOfferings').style.display='none';
+		document.getElementById("exp1").className = "";
+		document.getElementById("exp2").className = "";
+		document.getElementById("exp3").className = "active";
 	}
 </script>
