--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -11,6 +11,7 @@
 
 		<h2>I. Antecedentes generales</h2>
 		<div  class="experiencia">
+			<p><strong>Area de trabajo: </strong><%=@experience.area_id%></p>
 			<p><strong>Universidad: </strong><%=@experience.institution_id%></p>
 			<p><strong>Facultad: </strong><%=@experience.faculty%></p>
 			<p><strong>Departamento: </strong><%=@experience.department%></p>
