Nueva forma de mostras los servicios y experiencias, comments reducidos a una tabla, es necesario migrar

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@
 		<h2>Comentarios</h2>
 		<div class="comment">
 			<%if user_signed_in? %>
-				<%=render 'comments/form'%>
+				<%=render 'comments/formEvent'%>
 			<%end%>
 			<% @event.comments.order('created_at DESC').each do |comment|%>
 			<p>	
