--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -21,7 +21,7 @@
 
 <%= link_to "Ver listado de usuarios",  users_listarUsuarios_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Administrar actas",  minutes_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Administrar recursos",  resources_path, class:"btn btn-lg btnAdmin"%>
 
 <%= link_to "Administrar áreas",  areas_path, class:"btn btn-lg btnAdmin"%>
 
