--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -2,15 +2,25 @@
 
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
-		Acta: <%= @resource.name %>
+		<strong>
+		<% if resource.category == 1%>
+			Acta:
+		<% elsif resource.category == 2%>
+			Contrato:
+		<% elsif resource.category == 3%>
+			Formulario:
+		<%else%>
+			Recurso:
+		<%end%> </strong>  <%= @resource.name %>
 	</div>
 	<div class="panel-body">
-		<p> <strong>Fecha de la reunión:</strong> <%=l @resource.date%></p>		
+		<p> <strong>Fecha de emision:</strong> <%=l @resource.date%></p>	
+		<p> <strong>Fecha de subida:</strong> <%=l @resource.created_at%></p>		
 	</div>
 </div>
 
 <%if user_signed_in? %>
-<%= link_to 'Ver Acta', @resource.archive.url, :class =>"btn btn-lg btnCRUD" %>
+<%= link_to 'Ver recurso', @resource.archive.url, :class =>"btn btn-lg btnCRUD" %>
 <%= link_to 'Editar', edit_resource_path(@resource), :class =>"btn btn-lg btnCRUD" %>
 <%= link_to 'Volver', resources_path, :class =>"btn btn-lg btnCRUD" %>
 <%end%>
