--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,16 +1,26 @@
-<h1>Administrar actas </h1>
-<%= link_to 'Agregar nueva acta', new_resource_path, :class=>"btn btn-lg btnAdmin" %><br>
+<h1>Administrar recursos </h1>
+<%= link_to 'Agregar nuevo recurso', new_resource_path, :class=>"btn btn-lg btnAdmin" %><br>
 
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
-		Listado de actas
+		Listado de recursos
 	</div>
 	<div class="panel-body">
 		<% @resources.each do |resource| %>
-			<p><%=resource.name%>: <%=l resource.date%> - 
-			<%= link_to 'Ver acta', resource.archive.url %> -
+			<p><strong>
+			<% if resource.category == 1%>
+				Acta:
+			<% elsif resource.category == 2%>
+				Contrato:
+			<% elsif resource.category == 3%>
+				Formulario:
+			<%else%>
+				Recurso:
+			<%end%> </strong> 
+			<%=resource.name%>: <%=l resource.date%> - 
+			<%= link_to 'Ver recurso', resource.archive.url %> -
 			<%= link_to 'Detalle', resource %> -
-			<%= link_to 'Borrar acta', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
+			<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
 			</p>
 		<%end%>
 	</div>
