última acta mejorada y administracion de recursos separada por categoría

--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 <ul class="nav nav-tabs tabRease nav-justified">
 <li id="exp1" onclick="exp1()"><a>Servicios Activos</a></li>
-<li id="exp2" onclick="exp2()"><a>Experienciass</a></li>
+<li id="exp2" onclick="exp2()"><a>Experiencias</a></li>
 </ul>
 <div id="FServicios">
 	<%if @services.present?%>
