--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -24,7 +24,7 @@
 			<p><%= f.label :date, "Fecha: " %>
 			<%= f.date_select :date %></p>
 		</div>
-		<p class="note">Extensiones permitidas: .jpg .gif  .pdf  .doc .xls .ppt .txt </p>
+		<p class="note">Extensiones permitidas: .jpg .gif .png .pdf .doc .xls .ppt .txt </p>
 		<div class="field">
 			<%= f.file_field :archive %>
 		</div>
