--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,27 +1,137 @@
 <h1>Administrar recursos </h1>
 <%= link_to 'Agregar nuevo recurso', new_resource_path, :class=>"btn btn-lg btnAdmin" %><br>
 
-<div class="panel panel-default panelRease">
-	<div class="panel-heading">
-		Listado de recursos
-	</div>
-	<div class="panel-body">
-		<% @resources.each do |resource| %>
-			<p><strong>
-			<% if resource.category == 1%>
-				Acta:
-			<% elsif resource.category == 2%>
-				Contrato:
-			<% elsif resource.category == 3%>
-				Formulario:
+<ul class="nav nav-tabs tabRease nav-justified">
+	<li id="res1" onclick="res1()"><a>Actas</a></li>
+	<li id="res2" onclick="res2()"><a>Contratos</a></li>
+	<li id="res3" onclick="res3()"><a>Formularios</a></li>
+	<li id="res4" onclick="res4()"><a>Otros</a></li>
+</ul>
+
+<div id="Actas">
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Actas disponibles
+		</div>
+		<div class="panel-body">
+			<%if @actas.present?%>
+				<% @actas.each do |resource| %>
+					<p>	<%=resource.name%>: <%=l resource.date%> - 
+					<%= link_to 'Ver recurso', resource.archive.url %> -
+					<%= link_to 'Detalle', resource %> -
+					<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
+					</p>
+				<%end%>
 			<%else%>
-				Recurso:
-			<%end%> </strong> 
-			<%=resource.name%>: <%=l resource.date%> - 
-			<%= link_to 'Ver recurso', resource.archive.url %> -
-			<%= link_to 'Detalle', resource %> -
-			<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
-			</p>
-		<%end%>
+				No hay actas disponibles
+			<%end%>
+		</div>
 	</div>
 </div>
+<div id="Contratos">
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Contratos disponibles
+		</div>
+		<div class="panel-body">
+			<%if @contratos.present?%>
+				<% @contratos.each do |resource| %>
+					<p>	<%=resource.name%>: <%=l resource.date%> - 
+					<%= link_to 'Ver recurso', resource.archive.url %> -
+					<%= link_to 'Detalle', resource %> -
+					<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
+					</p>
+				<%end%>
+			<%else%>
+				No hay contratos disponibles
+			<%end%>
+		</div>
+	</div>
+</div>
+<div id="Formularios">
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Formularios disponibles
+		</div>
+		<div class="panel-body">
+			<%if @formularios.present?%>
+				<% @formularios.each do |resource| %>
+					<p>	<%=resource.name%>: <%=l resource.date%> - 
+					<%= link_to 'Ver recurso', resource.archive.url %> -
+					<%= link_to 'Detalle', resource %> -
+					<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
+					</p>
+				<%end%>
+			<%else%>
+				No hay formularios disponibles
+			<%end%>
+		</div>
+	</div>
+</div>
+<div id="Otros">
+	<div class="panel panel-default panelRease">
+		<div class="panel-heading">
+			Otro recursos disponibles
+		</div>
+		<div class="panel-body">
+			<%if @otros.present?%>
+				<% @otros.each do |resource| %>
+					<p>	<%=resource.name%>: <%=l resource.date%> - 
+					<%= link_to 'Ver recurso', resource.archive.url %> -
+					<%= link_to 'Detalle', resource %> -
+					<%= link_to 'eliminar recurso', resource, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta acta?' } %>
+					</p>
+				<%end%>
+			<%else%>
+				No hay otros recursos disponibles
+			<%end%>
+		</div>
+	</div>
+</div>
+<script type="text/javascript">
+	document.getElementById('Actas').style.display='block';	
+	document.getElementById("res1").className = "active";	
+	document.getElementById('Contratos').style.display='none';
+	document.getElementById('Formularios').style.display='none';
+	document.getElementById('Otros').style.display='none';
+	function res1(){
+		document.getElementById('Actas').style.display='block';	
+		document.getElementById('Contratos').style.display='none';
+		document.getElementById('Formularios').style.display='none';
+		document.getElementById('Otros').style.display='none';
+		document.getElementById("res1").className = "active";
+		document.getElementById("res2").className = "";
+		document.getElementById("res3").className = "";
+		document.getElementById("res4").className = "";
+	}
+	function res2(){
+		document.getElementById('Actas').style.display='none';	
+		document.getElementById('Contratos').style.display='block';
+		document.getElementById('Formularios').style.display='none';
+		document.getElementById('Otros').style.display='none';
+		document.getElementById("res1").className = "";
+		document.getElementById("res2").className = "active";
+		document.getElementById("res3").className = "";
+		document.getElementById("res4").className = "";		
+	}
+	function res3(){
+		document.getElementById('Actas').style.display='none';		
+		document.getElementById('Contratos').style.display='none';
+		document.getElementById('Formularios').style.display='block';
+		document.getElementById('Otros').style.display='none';
+		document.getElementById("res1").className = "";
+		document.getElementById("res2").className = "";
+		document.getElementById("res3").className = "active";
+		document.getElementById("res4").className = "";
+	}
+	function res4(){
+		document.getElementById('Actas').style.display='none';		
+		document.getElementById('Contratos').style.display='none';
+		document.getElementById('Formularios').style.display='none';
+		document.getElementById('Otros').style.display='block';
+		document.getElementById("res1").className = "";
+		document.getElementById("res2").className = "";
+		document.getElementById("res3").className = "";
+		document.getElementById("res4").className = "active";
+	}
+</script>
