Modificaciones en el controlador de recursos. Es necesario migrar

--- a/app/views/presentation/hacemos.html.erb
+++ b/app/views/presentation/hacemos.html.erb
@@ -36,9 +36,9 @@ La Red Nacional de Aprendizaje Servicio Chile a definido su rol a desempeñar a 
 		Listado de actas
 	</div>
 	<div class="panel-body">
-		<% @minutes.each do |minute| %>
-			<p><%=minute.name%>: <%=minute.date%> - 
-			<%= link_to 'Ver acta', minute.archive.url %> 
+		<% @resources.each do |resource| %>
+			<p><%=resource.name%>: <%=resource.date%> - 
+			<%= link_to 'Ver acta', resource.archive.url %> 
 			</p>
 		<%end%>
 	</div>
