--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Detalles del acta <%=@resource.name%></h1>
+<h1>Detalles del recurso <%=@resource.name%></h1>
 
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
